--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}django-ninja: demo{% endblock %}</title>
+    <title>{% block title %}nanodjango: demo{% endblock %}</title>
     <style>
       html {
         max-width: 70ch;
@@ -29,7 +29,7 @@
 </head>
 <body>
     <header>
-        <h1>django-ninja demo</h1>
+        <h1>nanodjango demo</h1>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
