--- a/templates/todos/index.html
+++ b/templates/todos/index.html
@@ -1,7 +1,7 @@
 <!-- index.html -->
 {% extends 'base.html' %}
 
-{% block title %}django-ninja : Todo list{% endblock %}
+{% block title %}nanodjango : Todo list{% endblock %}
 
 {% block content %}
   <h2>Todo List</h2>
