Make the index template include more data and look better. Also change the sortation on the todos end point which populates the todos list

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,10 @@
     <!-- Bootswatch Cerulean Theme -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/sketchy/bootstrap.min.css">
 
+    <!-- Bootstrap Icons  -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
+
+
     {% block extra_css %}{% endblock %}
 </head>
 <body>
